# br

./: .env.example  .gitignore  CHANGELOG.md  INTEGRATIONS.md  Makefile  README.md  STRUCTURE.md  TODO.md  docker-compose.yml  project.functions.toon  project.sh  project.toon  pytest.ini
.github/workflows/: ci.yml
brgenerator/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
brgenerator/docs/: 01-br-project-status.md  02-br-doc-generator-component.md  README.md
brgenerator/src/br_doc_generator/: __init__.py  cli.py  config.py  llm_client.py  models.py  web.py
brgenerator/src/br_doc_generator/validators/: __init__.py  base.py  content.py  financial.py  legal.py  pipeline.py
brgenerator/tests/: __init__.py  conftest.py  test_e2e.py  test_validators.py
cli/: br_cli.py  generate_sample_invoices.py  test_e2e.sh  validate_documentation.py
config/: litellm_config.yaml
docker/: Dockerfile.api  Dockerfile.llm  Dockerfile.ocr  Dockerfile.web  init-db.sql  nginx.conf  requirements-api.txt  requirements-ocr.txt
generator/: Makefile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
generator/config/: example_form.yaml
generator/src/br_doc_generator/: __init__.py  cli.py  models.py
generator/src/br_doc_generator/generators/: __init__.py  document.py  form.py  pdf.py
generator/src/br_doc_generator/validators/: legal.py  pipeline.py  structure.py
generator/tests/: conftest.py  test_validators.py
libs/: README.md
libs/br-core/: README.md  pyproject.toml
libs/br-core/src/br_core/: __init__.py  enums.py  formatters.py  types.py  validators.py
libs/br-core/tests/: __init__.py  test_validators.py
libs/br-data-sources/: README.md  pyproject.toml
libs/br-data-sources/src/br_data_sources/: __init__.py  base.py  curl.py  registry.py  rest.py  sql.py  variable_tracker.py
libs/br-llm-client/: README.md  pyproject.toml
libs/br-llm-client/src/br_llm_client/: __init__.py  client.py  fallback.py  prompts.py
libs/br-llm-client/tests/: __init__.py  test_prompts.py
libs/br-validators/: README.md  pyproject.toml
libs/br-validators/src/br_validators/: __init__.py  base.py  financial.py  legal.py  pipeline.py  structure.py
libs/br-validators/tests/: __init__.py  test_pipeline.py
libs/br-variable-api/: README.md  pyproject.toml
libs/br-variable-api/src/br_variable_api/: __init__.py  auth.py  models.py  router.py
libs/md-render/: README.md  pyproject.toml
libs/md-render/src/md_render/: __init__.py  converter.py  styles.py
libs/md-render/tests/: __init__.py  test_converter.py
src/api/: __init__.py  config.py  database.py  document_classifier.py  main.py  ocr_config.py
src/api/cqrs/: __init__.py  commands.py  events.py  queries.py
src/api/integrations/: __init__.py  jpk_export.py  ksef_client.py
src/api/models/: __init__.py  daily_time_entry.py  project_extended.py
src/api/routers/: __init__.py  auth.py  clarifications.py  config.py  documents.py  expenses.py  git_timesheet.py  integrations.py  logs.py  projects.py  reports.py  timesheet.py  variable_api.py
src/api/routers/documents/: __init__.py  crud.py  extraction.py  models.py  notes.py  upload.py
src/api/routers/expenses/: __init__.py  classification.py  crud.py  documentation.py  models.py  revenues.py  validation.py
src/api/services/: __init__.py  audit_trail.py  doc_generator.py  excel_exporter.py  expense_categorizer.py  expense_service.py  justification_generator.py  uncertainty_generator.py
src/api/services/doc_generator/: __init__.py  footnotes.py  generator.py  llm.py  prompts.py  templates.py  version_control.py
src/api/validators/: __init__.py  currency_converter.py  expense_pipeline.py  invoice_validator.py
src/doc_generator/: README.md  __init__.py  data_sources.py  engine.py  router.py  templates.py
src/doc_generator/templates/: __init__.py  base.py  financial.py  legal.py  project.py  registry.py  tax.py
src/infrastructure/: __init__.py  celery_app.py  tasks.py
src/integrations/: __init__.py  factory.py
src/integrations/accounting/: __init__.py  base.py  fakturownia.py  ifirma.py  wfirma_infakt.py
src/integrations/cloud/: __init__.py  base.py  dropbox_onedrive.py  google_s3.py  nextcloud.py
src/integrations/config/: __init__.py  database.py
src/ocr/: __init__.py  engines.py  extractors.py  main.py  models.py  preprocessing.py
tests/: __init__.py  conftest.py  test_doc_generator.py  test_doc_generator_e2e.py  test_documentation_validation.py  test_invoice_detection.py
tests/e2e/: test_doc_generator_e2e.py  test_integrations_e2e.py  test_scenarios.py  test_web_gui_smoke.py
tests/integration/: test_api.py  test_git_timesheet.py  test_integrations_api.py  test_sql_fixes.py
tests/unit/: test_extractors.py  test_integrations.py  test_validators.py
todo/: 01-br-project-status-analysis.md  02-br-refactoring-plan.md  03-br-documentation-best-practices.md  04-br-technical-architecture.md  05-br-priority-roadmap.md  06-br-progress-update.md  07-br-future-improvements.md  Dokumentacja_Praktyczna_BR_IPBOX.md  README.md  Raport_BR_IPBOX.md  TODO.md
todo1/: README.md  REFACTORING_SUMMARY.md  TODO.md  br-generator-llm-config.md  br-generator-status.md  br-generator-todo.md  br-generator-validation-system.md
web/: index.html
web/static/css/: style.css
web/static/js/: app.js  markdown-renderer.js
web/static/js/modules/: config.js  core.js  dashboard.js  doc-generator.js  logs.js  projects.js  reports.js  upload.js
