[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "br-validators"
version = "0.1.0"
description = "Multi-level validation pipeline for B+R documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Softreck", email = "info@softreck.dev"}
]
dependencies = [
    "br-core>=0.1.0",
    "pydantic>=2.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
llm = [
    "httpx>=0.25",
    "litellm>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
